--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "watch": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +23,6 @@
     "url": "https://github.com/rabeeajahangir/booksearch-engine/issues"
   },
   "homepage": "https://github.com/rabeeajahangir/booksearch-engine#readme",
-  "description": "",
   "dependencies": {
     "apollo-server-express": "^3.3.0",
     "express": "^4.17.1",
@@ -33,5 +33,6 @@
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
     "react-router-dom": "^5.3.0"
-  }
+  },
+  "description": ""
 }
