--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/rabeeajahangir/booksearch-engine#readme",
   "dependencies": {
     "apollo-server-express": "^3.3.0",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "graphql": "^15.5.3",
